
* Changes to (unofficially for now) support Solaris and AIX platforms.

* Fix issue with checked teardown functions in CK_NOFORK mode. If
  the teardown function called an assertion that failed, an
  infinate loop would result. Bug#98. As a result of the change, for now
  checked teardown functions that fail in CK_NOFORK mode will
  not cause the test to fail.


Fri May 30, 2014: Released Check 0.9.13
  based on r1137 (2014-05-26 21:03:09 +0000)

* When a test assertion fails, exit() was invoked. This results in any
  registered exit handlers being invoked. A test should not be relied
  upon to clean up if it fails. Instead, _exit() will be used to signal
  a test failure, to prevent exit handlers from being invoked.

* Fix issue with string formatting in ck_assert_(u)int_* calls, where using
  the % operator would be interpreted as a string formatter. Bug #96.

* If the LOG/XML/TAP file name is set to "-" either through the
  srunner_set_log() srunner_set_xml() or srunner_set_tap() calls
  or through the related environment variables, the logged data will be
  printed to stdout instead of a file. This is mainly to support using TAP
  for fixtures which expect the results to be reported via stdout. However,
  it is available via all of Check's logging modalities.

* For CMake builds, check_stdint.h was not being installed. This is now
  fixed.

* Check's example under doc/example now also works for CMake projects
  using Visual Studios and MSVC. This includes an example CMake
  configuration.


Mon Jan 20, 2014: Released Check 0.9.12
  based on r1054 (2014-01-16 23:08:03 +0000)

* Additional unit tests created for internal and external Check
  APIs.

* Check now compiled on Windows using MSVC when using CMake and
  NMake. All unit tests pass, though shell script based ones need
  to be run in the MSYS environment.

* Check now compiles on Windows using Visual Studio 10
  when using CMake. check_check passes when run from Visual Studios.
